style.css
/* ... */
.header__left {
  display: flex;
  align-items: center;
}

header .logo {
  padding-top: 24px;
  padding-bottom: 24px;
}
@media (max-width: 1024px) {
  header .logo {
    width: 75px;
    height: auto;
    padding-top: 14px;
    padding-bottom: 14px;
  }
}

.header__right {
  position: relative;
}

#navOpen,
#navClose {
  transition: color 0.2s, background 0.2s;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background: white;
  padding-left: 25px;
  padding-right: 25px;
  border: 0;
  color: #000;
}
@media (max-width: 1024px) {
  #navOpen,
  #navClose {
    padding-left: 15px;
    padding-right: 15px;
  }
}
#navOpen:hover,
#navClose:hover {
  background: var(--header-color);
  color: #fff;
  opacity: 1;
}
#navOpen:active,
#navClose:active {
  background: #4c4c4c;
}

#navClose {

  font-family: "Times New Roman";
  font-size: 64px;
  line-height: 1;

  position: absolute;
  top: 0;
  right: 0;
  width: 71px;
  height: 65px;
}
@media (min-width: 1025px) {
  #navClose {
    font-size: 82px;
    width: 105px;
    height: 94px;
  }
}

.header-menu {
  fill: black;
}
@media (max-width: 1024px) {
  .header-menu {
    width: 41px;
    height: 41px;
  }
}
#navOpen:hover .header-menu {
  fill: white;
}

.nav {
  display: none;
  position: relative;
}
.nav.--open {
  overflow-x: hidden;
  overflow-y: scroll;

  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100vh;
  z-index: 3;
  background: rgba(0, 0, 0, 0.82);
  display: flex;
  justify-content: flex-end;
}

.nav.--open > .container {
  margin-right: 0;
}
@media (min-width: 1025px) {
  .nav.--open > .container {
    
  }
}
@media (min-width: 2560px) {
  .nav.--open > .container {
    max-width: calc(var(--container-width) + 15px);
    margin-left: auto;
    margin-right: auto;
  }
}





.nav.--open li {
  margin-bottom: 2px;
  text-align: right;
}

.nav.--open li a {
  display: block;
  /* text-align: center; */
  font-family: var(--nav-font-face);
  font-size: 16px;
  font-weight: bold;
  letter-spacing: 0.15em;
  text-transform: uppercase;
}
.nav.--open li:nth-child(1) a {
  font-size: 25px;
  font-weight: normal;
}

@media (min-width: 768px) {
  .nav.--open li a {
    font-size: 22px;
  }
  .nav.--open li:nth-child(1) a {
    font-size: 35px;
  }
}

.menu {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-top: var(--header-height);
}

.menu-item {
  perspective: 800px;
}

.card {
  position: relative;
  width: 100vw;
  height: 100px;
  transition: transform 0.5s;
  transform-origin: center;
  transform-style: preserve-3d;
}
@media (min-width: 768px) {
  .card {
    width: 940px;
    height: 100px;
  }
}

.front,
.back {
  transition: all 0.2s;
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  border: 1px solid #0c0c0c;
  /* background: red; */
  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
}

.front {
  background: #333;
}

.back {
  /* background: blue; */
  background: #1e1d1d;
  transform: rotateX(-180deg);
}

.back > div {
  display: flex;
  gap: 30px;
  margin-left: 12px;
  margin-right: 18px;
  align-items: center;
}
@media (min-width: 768px) {
  .back > div {
    gap: 70px;
    margin-right: 18px;
  }
}
@media (min-width: 1025px) {
  .back > div {
    gap: 140px;
    margin-right: 32px;
  }
}

@media (max-width: 767px) {
  .back > div > img {
    width: 31px;
    height: 31px;
  }  
}


.menu-item a:hover .back {
  background: #333;
}

.menu-item:nth-child(1) .back {
  background: #393939;
}

.menu-item .card.flipped {
  transform: rotateX(-180deg);
}

.menu-item:nth-child(1) .card {
  height: 150px;
}

.menu-item:nth-child(2) .card {
  transition-delay: 0.1s;
}

.menu-item:nth-child(3) .card {
  transition-delay: 0.2s;
}

.menu-item:nth-child(4) .card {
  transition-delay: 0.3s;
}



.menu-end {
  transition: 1s all;
  opacity: 0;
  width: 100%;
  max-width: 940px;
  background: #000;
  margin-left: auto;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  height: 100px;
  padding-right: 18px;
}
@media (min-width: 1025px) {
  .menu-end {
    padding-right: 32px;
  }
}
.menu-end.--fadein {
  opacity: 1;
  transition-delay: 0.75s;
}

ul.social-nav li {
  margin-right: 10px;
}
ul.social-nav a {
  transition: 0.4s all;
  padding: 10px 20px;

  display: flex;
  align-items: center;
  justify-content: center;
}
ul.social-nav a.instagram:hover {
  color: #c13584;
}
ul.social-nav a.twitter:hover {
  color: #1da1f2;
}
ul.social-nav a.linkedin:hover {
  color: #0077b5;
}
@media (max-width: 767px) {
  ul.social-nav a > svg {
    width: 23px;
    height: 23px;
  }
}

.hero {
  position: relative;
  min-height: 720px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
@media (min-width: 768px) {
  .hero {
    height: calc(100vh - var(--header-height));
    min-height: 92vh;
    flex-direction: row;
    justify-content: flex-start;
  }
}

.hero__inner {
  margin-top: 12vw;
  
  margin-left: calc(var(--gutter) * 1.5);
  margin-right: calc(var(--gutter) * 1.5);
  max-width: var(--container-width);

  position: relative;
}
@media (min-width: 390px) {
  .hero__inner {
    margin-left: calc(var(--gutter) * 2);
    margin-right: calc(var(--gutter) * 2);
  }
}
@media (min-width: 428px) {
  .hero__inner {
    margin-left: calc(var(--gutter) * 2.5);
    margin-right: calc(var(--gutter) * 2.5);
  }
}
@media (min-width: 768px) {
  .hero__inner {
    margin-top: 0;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    
    width: 100%;
  }
}
@media (min-width: 1025px) {
  .hero__inner {
    margin-left: calc(var(--gutter-lg) * 2);
  }
}
@media (min-width: 1280px) {
  .hero__inner {
    margin-left: 6vw;
  }
}
@media (min-width: 2560px) {
  .hero__inner {
    margin-left: auto;
    margin-right: auto;
  }
}
/* ... */

